# liberate-mx

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: .bashrc  mx.tcl  mx_tt.tcl  sramgen_sram_32x32m2w8_replica_v1.spectre.spice  template_sram.tcl
src/: error.rs  lib.rs  netlist.rs  tests.rs
templates/: include_tt.spice  include_tt_leakage.spice  mx.tcl  run_mx.sh  source.spice  template_sram.tcl
