[package]
name = "liberate_mx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.12.0"
lazy_static = "1.4.0"
serde = { version = "1.0.148", features = ["derive"] }
tera = "1.17.1"
thiserror = "1.0.37"
