[package]
name = "liberate_mx"
version = "0.1.0"
edition = "2021"
authors = ["Rahul Kumar <rahulkumar@berkeley.edu>"]
description = "Interface for running Cadence's Liberate MX from Rust code"
readme = "README.md"
repository = "https://github.com/rahulk29/liberate-mx"
license = "BSD-3-Clause"
exclude = ["/examples"]

[dependencies]
derive_builder = "0.12"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
tera = "1"
thiserror = "1"
